--- a/installprogram.htm
+++ b/installprogram.htm
@@ -48,7 +48,7 @@
 <p><span style="color: #000080;"><a href="https://www.microsoft.com/en-us/download/details.aspx?id=13255" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="AccessDatabaseEngine.exe">AccessDatabaseEngine.exe</a></span><span style="color: #0000ff;"> </span>(щёлкните на ссылку для загрузки).</p>
 <p>а также среда выполнения .NET Framework - <a href="https://www.microsoft.com/ru-ru/download/details.aspx?id=24872" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dotNetFx40_Client_x86_x64.exe">dotNetFx40_Client_x86_x64.exe</a><span style="font-weight: bold;"> </span>(щёлкните на ссылку для загрузки).</p>
 <p><span style="font-size: 13px; color: #000000;">&nbsp;</span></p>
-<p>Для установки программы достаточно запустить установочный файл (<a href="dicom2fmm.msi%20" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dicom2fmm.msi&nbsp;">dicom2fmm.msi</a><span style="font-weight: bold;">,  </span></p>
+<p>Для установки программы достаточно запустить установочный файл (<a href="http://dicom2fmm.gihub.io/downloads/dicom2fmm.msi" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="dicom2fmm.msi&nbsp;">dicom2fmm.msi</a><span style="font-weight: bold;">,  </span></p>
 <p>щёлкните на ссылку для загрузки) с указанием &quot;клиентской&quot; папки. </p>
 <p>На пример, <span style="font-weight: bold; color: #000080;">P:\Clients\WorkingVersions\dicom2fmm\</span></p>
 <p>&nbsp;</p>
